# hyperloop.next

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  Gemfile  Gruntfile.js  Jenkinsfile  README.md  appc  build.js  build.sh  package-lock.json  package.json
.github/workflows/: android.yml  ios.yml
android/: .classpath  .project  CHANGELOG.md  README.md  build.gradle  build.properties  build.xml  manifest
android/hooks/: build.gradle.ejs  hyperloop.js  package-lock.json  package.json
android/hooks/metabase/: generate.js  metabase.js
android/hooks/tasks/: copy-sources-task.js  generate-metabase-task.js  generate-sources-task.js  scan-references-task.js
android/hooks/test/: copy-sources-task.spec.js  scan-references-task.spec.js  (+1 more)
assets/: .gitignore
documentation/: android.md  ios.md
example/windows/: basic.js
hooks/: hyperloop-init.js
iphone/: HyperloopPointer.h  HyperloopPointer.m  HyperloopValue.h  HyperloopValue.m  README.md  TODO.md  build.sh  manifest  module.xcconfig  script.js  titanium.xcconfig
iphone/Classes/: HyperloopModuleAssets.m
iphone/hooks/: Gruntfile.js  NOTES.md  hyperloop.js  package-lock.json  package.json
iphone/hyperloop.xcodeproj/: project.pbxproj
iphone/plugin/: hyperloop.js  package.json
iphone/src/: HyperloopClass.h  HyperloopClass.m  HyperloopStruct.h  HyperloopStruct.m  HyperloopUtils.h  HyperloopUtils.m  class.h  class.m  define.h  define.m  pointer.h  pointer.m  utils.h  utils.m
iphone/tests/: TestDispatch.m  TestExtend.m  TestJS.m  TestPointers.m  TestSwift.m  TestUtils.m  TestView.swift  TitaniumMocks.h  TitaniumMocks.m
iphone/titanium/: HyperloopModule.h  HyperloopModule.m  HyperloopModuleAssets.h  HyperloopModuleAssets.m  HyperloopView.h  HyperloopView.m  HyperloopViewProxy.h  HyperloopViewProxy.m
metabase/ios/: Gruntfile.js  index.js  package.json
module_template/: build.js  create.js  package.json
module_template/template/: module.js
plugins/: hyperloop.js
plugins/windows/: hyperloop.js
tools/: build.sh  ci.js  package.json  tiver.js
windows/: CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.ejs  README.md  build.bat  manifest  timodule.xml
windows/cmake/: FindHAL.cmake  FindJavascriptCore.cmake  FindTitaniumKit.cmake  FindTitaniumWindows_Utility.cmake  Hyperloop_Config.cmake
windows/hooks/: hyperloop.js  package-lock.json  package.json
windows/hooks/TitaniumWindows_Hyperloop/src/: TypeHelper.cs.ejs
windows/include/: Hyperloop.hpp
windows/plugins/hooks/: hyperloop.js  package-lock.json  package.json
windows/plugins/hyperloop/hooks/windows/: hyperloop.js  package-lock.json
windows/plugins/hyperloop/hooks/windows/TitaniumWindows_Hyperloop/phone/: TitaniumWindows_Hyperloop.csproj.ejs  TitaniumWindows_Hyperloop.sln
windows/plugins/hyperloop/hooks/windows/TitaniumWindows_Hyperloop/win10/: TitaniumWindows_Hyperloop.sln
windows/reflection/HyperloopInvocation/phone/: HyperloopInvocation.csproj
windows/reflection/HyperloopInvocation/src/: HyperloopInvocation.cs
windows/reflection/HyperloopInvocation/src/Properties/: AssemblyInfo.cs
windows/reflection/HyperloopInvocation/store/: HyperloopInvocation.csproj  HyperloopInvocation.sln
windows/reflection/HyperloopInvocation/win10/: HyperloopInvocation.csproj  HyperloopInvocation.sln  project.lock.json
windows/sdk_plugins/windows/: hyperloop.js
windows/sdk_plugins/windows/TitaniumWindows_Hyperloop/src/Properties/: AssemblyInfo.cs
windows/sdk_plugins/windows/TitaniumWindows_Hyperloop/win10/: TitaniumWindows_Hyperloop.csproj.ejs
windows/src/: Hyperloop.cpp
(+114 files in other folders)
